--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curbside PickUp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>  
     <nav class="navbar navbar-dark bg-dark">
@@ -15,8 +15,8 @@
         </div>
     </nav>
 
-    <div class="container">
-        <h2 class="mt-50">TEST</h2>
+    <div class="container" id="pickup-list">
+        <h2 class="mt-50 ">TEST</h2>
     </div>
 
 
