created seeds for database

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,8 +22,10 @@
 
     <div class="pickup-list bg-dark">
         <div class="list-tabs">
-            <h2 class="tab-text">CHECKED IN</h2>
-            <h2 class="tab-text">ASSIGNED</h2>
+            <h2 class="tab-text">NOT READY | </h2>
+            <h2 class="tab-text">READY FOR PICKUP | </h2>
+            <h2 class="tab-text">CHECKED IN | </h2>
+            <h2 class="tab-text">DONE </h2>
         </div>
         <br>
     </div>
