--- a/views/emp.ejs
+++ b/views/emp.ejs
@@ -14,8 +14,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;500&display=swap" rel="stylesheet">
 </head>
 <body>  
-    <h1><a href="/emp">EMPLOYEE</a></h1>
-    <h1><a href="/customer">CUSTOMER</a></h1>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid text center">
+            <span class=" mx-auto navbar-brand my-auto h1" id="nav-title">CURBSIDE PICK UP</span>
+        </div>
+    </nav>
+
+    <div class="pickup-list bg-dark">
+        <div class="list-tabs">
+            <h2 class="tab-text">NOT READY | </h2>
+            <h2 class="tab-text">READY FOR PICKUP | </h2>
+            <h2 class="tab-text">CHECKED IN | </h2>
+            <h2 class="tab-text">DONE </h2>
+        </div>
+        <br>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
