--- a/public/styles.css
+++ b/public/styles.css
@@ -8,21 +8,19 @@ body {
     font-size: xx-large;
 }
 .pickup-list {
-    margin: 3% 15%;
+    margin: 3% 20%;
     padding-bottom: 70%;
     border-radius: 25px;
 }
 
-.list-tabs {
-    color: yellow;
-    display: inline-block;
-    text-align: center;
+#right-button {
+    border-top-right-radius: 25px;
 }
 
-.tab-text {
-    display: inline-block;
+#left-button {
+    border-top-left-radius: 25px;
+}
+
+.btn {
     font-family: 'Work Sans', sans-serif;
-    font-weight: 100;
-    font-size: xx-large;
-    color: rgb(238, 236, 236);
 }
