--- a/views/emp.ejs
+++ b/views/emp.ejs
@@ -21,17 +21,35 @@
     </nav>
 
     <div class="pickup-list bg-dark">
-        <div class="list-tabs">
-            <h2 class="tab-text">NOT READY | </h2>
-            <h2 class="tab-text">READY FOR PICKUP | </h2>
-            <h2 class="tab-text">CHECKED IN | </h2>
-            <h2 class="tab-text">DONE </h2>
+        <div class="row">
+            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                <label id="left-button" class="btn btn-outline-light" for="btnradio1" >NOT READY</label>
+            
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                <label class="btn btn-outline-light" for="btnradio2" id="ready-btn">READY FOR PICKUP</label>
+            
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                <label class="btn btn-outline-light" for="btnradio3" id="checked-in-btn">CHECKED IN</label>
+
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                <label id="right-button" class="btn btn-outline-light" for="btnradio4">DONE</label>
+            </div>
         </div>
-        <br>
+        <div>
+            <ul id="interest-list">
+                <% for(let order of orders) {%> 
+                    <% if(order.status_ == 'not ready') { %>  
+                        <a href=""><li><%= order._id%></li></a>
+                    <% } %> 
+                <% } %> 
+            </ul>
+        </div>
     </div>
 
 
-
+    <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="emp.js"></script>
 </body>
 </html>
