--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curbside PickUp</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;500&display=swap" rel="stylesheet">
 </head>
-<body>  
+
+<body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid text center">
             <span class=" mx-auto navbar-brand my-auto h1" id="nav-title">CURBSIDE PICK UP</span>
@@ -23,39 +26,55 @@
     <div class="pickup-list bg-dark">
         <div class="row">
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                <label id="left-button" class="btn btn-outline-light" for="btnradio1" >NOT READY</label>
-            
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                <input type="radio" class="btn-check" value="not ready" name="btnradio" id="btnradio1"
+                    autocomplete="off" checked>
+                <label id="left-button" class="btn btn-outline-light" for="btnradio1">NOT READY</label>
+
+                <input type="radio" class="btn-check" value="ready for pickup" name="btnradio" id="btnradio2"
+                    autocomplete="off">
                 <label class="btn btn-outline-light" for="btnradio2" id="ready-btn">READY FOR PICKUP</label>
-            
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+
+                <input type="radio" class="btn-check" value="checked in" name="btnradio" id="btnradio3"
+                    autocomplete="off">
                 <label class="btn btn-outline-light" for="btnradio3" id="checked-in-btn">CHECKED IN</label>
 
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                <input type="radio" class="btn-check" value="done" name="btnradio" id="btnradio4" autocomplete="off">
                 <label id="right-button" class="btn btn-outline-light" for="btnradio4">DONE</label>
             </div>
         </div>
         <div>
             <div id="interest-list" class="list-group">
-                <% for(let order of orders) {%> 
-                    <% if(order.status_ == 'not ready') { %>  
+                <% for(let order of orders) {%>
+                    <% if(order.status_=='not ready' ) { %>
                         <a href="#" class="list-group-item list-group-item-action">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1"><%=order.customer.firstName %> <%=order.customer.lastName %>  -  (<%=order.customer.phoneNumber.toString().slice(0,3) %>)<%=order.customer.phoneNumber.toString().slice(3,6) %>-<%=order.customer.phoneNumber.toString().slice(6,11) %></h5>
+                                <h5 class="mb-1">
+                                    <%=order.customer.firstName %>
+                                        <%=order.customer.lastName %> - (
+                                            <%=order.customer.phoneNumber.toString().slice(0,3) %>)
+                                                <%=order.customer.phoneNumber.toString().slice(3,6) %>-
+                                                    <%=order.customer.phoneNumber.toString().slice(6,11) %>
+                                </h5>
                             </div>
-                            <p class="mb-1"><%=order._id %></p>
-                            <small><%=order.products[0].name %></small>
-                          </a>
-                    <% } %> 
-                <% } %>
-            </div> 
+                            <p class="mb-1">
+                                <%=order._id %>
+                            </p>
+                            <small>
+                                <%=order.products[0].name %>
+                            </small>
+                        </a>
+                        <% } %>
+                            <% } %>
+            </div>
         </div>
     </div>
 
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="customer.js"></script>
 </body>
+
 </html>
