--- a/views/empLogin.ejs
+++ b/views/empLogin.ejs
@@ -17,9 +17,16 @@
 </head>
 
 <body>
-    <h1><a href="/emp/login">EMPLOYEE</a></h1>
-    <h1><a href="/customer/login">CUSTOMER</a></h1>
+    <h1>Login</h1>
+    <form action="/emp/login" method="POST">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required>
 
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+
+        <button>Login</button>
+    </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
